[gd_scene load_steps=17 format=3 uid="uid://detww6x4sfk1x"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ic5a6"]
[ext_resource type="Texture2D" uid="uid://dpqyd3dottotr" path="res://assets/player/caves-player.png" id="2_iy5oy"]
[ext_resource type="PackedScene" uid="uid://ddpow41s32n4r" path="res://scenes/player_camera.tscn" id="3_wq0i8"]
[ext_resource type="PackedScene" uid="uid://d1qpbb8d43pxl" path="res://scenes/caster.tscn" id="4_ees76"]

[sub_resource type="Animation" id="Animation_ay80o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_ws72a"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_g8ueo"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_cxg5c"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_ng08u"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_ijrtf"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41tpj"]
_data = {
"RESET": SubResource("Animation_ay80o"),
"fall": SubResource("Animation_ws72a"),
"hurt": SubResource("Animation_g8ueo"),
"idle": SubResource("Animation_cxg5c"),
"jump": SubResource("Animation_ng08u"),
"run": SubResource("Animation_ijrtf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0ww8"]
size = Vector2(10, 18)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_amia7"]
radius = 6.0
height = 22.0

[sub_resource type="Animation" id="Animation_vcssf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vqe3s"]
resource_name = "impervious"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qfo56"]
_data = {
"RESET": SubResource("Animation_vcssf"),
"impervious": SubResource("Animation_vqe3s")
}

[node name="Player" type="CharacterBody2D" groups=["MovingSprites", "Player"]]
collision_layer = 0
script = ExtResource("1_ic5a6")

[node name="PlayerSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_iy5oy")
hframes = 19
frame = 13

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_41tpj")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_y0ww8")

[node name="PlayerCamera" parent="." instance=ExtResource("3_wq0i8")]

[node name="Debugging" type="Label" parent="."]
offset_left = -19.0
offset_top = -49.0
offset_right = 148.0
offset_bottom = 312.0
scale = Vector2(0.252846, 0.115286)
theme_override_font_sizes/font_size = 64
text = "line 1
line 2
line 3
line 4"

[node name="Caster" parent="." instance=ExtResource("4_ees76")]

[node name="PlayerHitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionHitBox" type="CollisionShape2D" parent="PlayerHitBox"]
visible = false
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_amia7")

[node name="ImperviousTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ImperviousPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qfo56")
}

[node name="InjuredTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
area_mask = 2

[connection signal="area_entered" from="PlayerHitBox" to="." method="_on_player_hit_box_area_entered"]
[connection signal="timeout" from="ImperviousTimer" to="." method="_on_impervious_timer_timeout"]
[connection signal="timeout" from="InjuredTimer" to="." method="_on_injured_timer_timeout"]
